--- a/2-5/styles.css
+++ b/2-5/styles.css
@@ -32,7 +32,10 @@ h1 {
   padding: 0 0.5rem;
 }
 
+/* Content Styles */
+
 .content {
+  
   text-align: center;
 }
 
@@ -41,6 +44,30 @@ h1 {
   width: 40%;
 }
 
+.contact-content {
+  background: lemonchiffon;
+  margin: 0 25%;
+}
+
+.contact-content p {
+  padding: 2rem;
+}
+
+.flash {
+  animation-name: flash;
+   animation-duration: 0.33s;
+   animation-timing-function: linear;
+   animation-iteration-count: infinite;
+   animation-direction: alternate;
+   animation-play-state: running;
+}
+
+@keyframes flash {
+  from {color: coral;}
+  to {color: black;}
+}
+
+/* Footer Styles */
 .footer {
   padding-top: 3rem;
   text-align: center;
