--- a/2-5/styles.css
+++ b/2-5/styles.css
@@ -1,3 +1,4 @@
+/* Global Styles */
 body,
 html {
   background: White;
@@ -11,6 +12,7 @@ h1 {
   padding: 0;
 }
 
+/* Header Styles */
 .header {
   background: PowderBlue;
   padding: 1rem;
@@ -33,9 +35,7 @@ h1 {
 }
 
 /* Content Styles */
-
 .content {
-  
   text-align: center;
 }
 
@@ -55,16 +55,20 @@ h1 {
 
 .flash {
   animation-name: flash;
-   animation-duration: 0.33s;
-   animation-timing-function: linear;
-   animation-iteration-count: infinite;
-   animation-direction: alternate;
-   animation-play-state: running;
+  animation-duration: 0.33s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-play-state: running;
 }
 
 @keyframes flash {
-  from {color: coral;}
-  to {color: black;}
+  from {
+    color: coral;
+  }
+  to {
+    color: black;
+  }
 }
 
 /* Footer Styles */
