--- a/3-19/styles.css
+++ b/3-19/styles.css
@@ -4,7 +4,6 @@ body, html {
   color: #2C3E50;
   margin: 0;
   padding: 0;
-  font-family: 'Quicksand', sans-serif;
 }
 
 h1, h2, p, a, ul {
@@ -26,15 +25,13 @@ a {
 }
 
 .header a {
-  color: #ECF0F1;
-  font-family: 'Major Mono Display', monospace;
   text-decoration: none;
-  text-transform: uppercase;
-}
-.header a:hover {
-  color: #E74C3C;
+  color: #ECF0F1;
 }
 .header a:active {
+  color: #E74C3C;
+}
+.header a:hover {
   color: #E74C3C;
 }
 
@@ -67,21 +64,6 @@ a {
   color: #E9F1DF;
 }
 
-.card:hover {
-  animation-duration: 1s;
-  animation: bubble 1.0s forwards;
-}
-@keyframes bubble {
-  from {
-    position: aboslute;
-  }
-
-  to {
-    transform: translateY(-4px);
-  }
-
-}
-
 .card h2 {
   padding: 1rem;
   background: #3498DB;
@@ -109,28 +91,9 @@ a {
   margin: 1rem;
 }
 
-.form-content input[type="submit"] {
-  border: none;
-  border-radius: 6px;
-  background: #E74C3C;
-  color: #E9F1DF;
-  padding: 1rem;
-}
-
-.form-content input[type="submit"]:hover {
-  cursor: pointer;
-  opacity: .7;
-}
-
-.about-content {
-  margin: 1.5rem 8rem;
-}
-
-.about-content p {
-  padding: 1rem;
-}
-.about-content a:visited {
-  color: #E74C3C;
+.test-content {
+  text-align: center;
+  padding: 2rem;
 }
 
 
@@ -141,31 +104,4 @@ a {
 .footer a {
   color: #E74C3C;
   font-size: 2rem;
-}
-.footer a:hover {
-  opacity: .7;
-}
-
-@media screen and (max-width: 750px) {
-  /* Mobile Header */
-  .header ul {
-    display: inline;
-  }
-
-  /* Mobile Content */
-  .home-content {
-    display: inline;
-  }
-
-  .card {
-    margin: 0 1rem;
-  }
-
-  .form-content {
-    margin: 1rem;
-  }
-
-  .about-content {
-    margin: 1rem;
-  }
 }
